--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -10,7 +10,7 @@
         You are in room: {{ current_user.roomid }}
     </div>
 </div>
-<div class="container border border-primary">
+<div class="container border">
     <br>
     <form action="/profile" method="POST">
         <div class="container-fluid">
