--- a/project/templates/room.html
+++ b/project/templates/room.html
@@ -8,7 +8,7 @@
     </h3>
 </div>
 <br>
-<div class="container border border-primary">
+<div class="container border">
     <h3 class="fa fa-align-center" aria-hidden="true">Player Controls</h3>
     <br>
     <div class="input-group">
@@ -47,9 +47,9 @@
     <br>
 </div>
 <br>
-<div class="container border border-primary">
+<div class="container border">
     <br>
-    <div class="container border border-primary">        
+    <div class="container border">        
         <h3 class="fa fa-align-center" aria-hidden="true">Users</h3>
         <table class="table">
             <thead>
@@ -81,7 +81,7 @@
         </table>
     </div>
     <br>
-    <div class="container border border-primary">
+    <div class="container border">
         <h3 class="fa fa-align-center" aria-hidden="true">Administrators</h3>
         <table class="table">
             <thead>
