--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -8,6 +8,18 @@
             <input type="text" class="form-control" id="userid" name="userid" required>
         </div>
         <div class="mb-3">
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="mb-3">
+            <label for="email">E-mail:</label>
+            <input type="text" class="form-control" id="email" name="email" required>
+        </div>
+        <div class="mb-3">
+            <label for="mobile">Mobile:</label>
+            <input type="text" class="form-control" id="mobile" name="mobile" required>
+        </div>
+        <div class="mb-3">
             <label for="password">Password:</label>
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
@@ -15,11 +27,6 @@
             <label for="repass">Re-type Password:</label>
             <input type="password" class="form-control" id="repass" name="repass" required>
         </div>
-        <div class="mb-3">
-            <label for="name">Name:</label>
-            <input type="text" class="form-control" id="name" name="name" required>
-        </div>
-        <!-- <div style="width: 500px" id="reader"></div> -->
         <div class="mb-3" id="reader"></div>
         <div class="mb-3">
             <input type="hidden" class="form-control" id="roomid" name="roomid" value="" required>
