--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -19,7 +19,26 @@
                     <label for="name">Name:</label>
                 </div>
                 <div class="col-9 text-white">
-                    <input type="text" class="form-control" id="name" name="name" value="{{ current_user.name }}" required>
+                    <input type="text" class="form-control" id="name" name="name" value="{{ current_user.name }}"
+                        required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3 text-white">
+                    <label for="email">E-mail:</label>
+                </div>
+                <div class="col-9 text-white">
+                    <input type="text" class="form-control" id="email" name="email" value="{{ current_user.email }}"
+                        required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3 text-white">
+                    <label for="mobile">E-mail:</label>
+                </div>
+                <div class="col-9 text-white">
+                    <input type="text" class="form-control" id="mobile" name="mobile" value="{{ current_user.mobile }}"
+                        required>
                 </div>
             </div>
             <div class="row">
