--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -34,7 +34,7 @@
             </div>
             <div class="row">
                 <div class="col-3 text-white">
-                    <label for="mobile">E-mail:</label>
+                    <label for="mobile">Mobile:</label>
                 </div>
                 <div class="col-9 text-white">
                     <input type="text" class="form-control" id="mobile" name="mobile" value="{{ current_user.mobile }}"
