--- a/project/templates/musics.html
+++ b/project/templates/musics.html
@@ -27,7 +27,7 @@
         <thead>
             <tr>
                 <td></td>
-                <td>Video</td>
+                <td>Preview</td>
                 <td>Music</td>
                 {% if current_user.admin == "X" %}
                 <td></td>
