--- a/project/templates/youtube.html
+++ b/project/templates/youtube.html
@@ -13,7 +13,7 @@
         <thead>
             <tr>
                 <th></th>
-                <th>Video</th>
+                <th>Preview</th>
                 <th>Description</th>
             </tr>
         </thead>
