--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -78,7 +78,7 @@
     </form>
     <br>
     <form action="/changeroom" method="POST">
-        <p>* Regular users must scan qrcode in karatube player screen to change room or ask a room admin to add.</p>
+        <p>* Regular users must scan QR code in KaraTube player screen to change room or ask a room admin to add him.</p>
         <div class="mb-3" id="reader"></div>
         <input type="hidden" class="form-control" id="roomid" name="roomid" value="" required>
         <input type="hidden" class="form-control" id="roompass" name="roompass" value="" required>
