--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -19,6 +19,7 @@
         </div>
         <button type="submit" class="btn btn-outline-primary">Login</button>
     </form>
+    <a href="{{ url_for('auth.recoverlogin') }}">Recover login data</a>
 </div>
 
 {% endblock %}
