--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -146,7 +146,7 @@
   <div id="overlay-song"></div>
   <div id="overlay-artist"></div>
   <div class="video-container">
-    <video id="video" poster="{{ url_for('static', filename='images/karatube_background1.jpg') }}" autoplay>
+    <video id="video" poster="{{ url_for('static', filename='images/karatube_background1.jpg') }}" autoplay controls>
       <source src="" type="video/mp4">
     </video>
   </div>
