--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.signup') }}">Sigup</a>
+                        <a class="nav-link" href="{{ url_for('auth.signup') }}">Signup</a>
                     </li>
                     {% endif %}
                     {% if current_user.is_authenticated %}
