--- a/project/templates/queue.html
+++ b/project/templates/queue.html
@@ -13,10 +13,11 @@
                 <th>Singer</th>
                 <th>Music</th>
                 <th>Artist</th>
+                <th>D</th>
             </tr>
         </thead>
         <tbody>
-            {% for queue_item in queue %}            
+            {% for queue_item in queue %}
             <tr>
                 <td>
                     {% if queue_item.status == 'P' %}
@@ -32,6 +33,11 @@
                 </td>
                 <td>{{ queue_item.song }}</td>
                 <td>{{ queue_item.artist }}</td>
+                <td>
+                    {% if queue_item.status == 'D' %}
+                    <img src="{{ url_for('static', filename='images/icon-download.png') }}" height="24" width="24">
+                    {% endif %}
+                </td>
             </tr>
             {% endfor %}
         </tbody>
