--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -17,7 +17,7 @@
         </div>
         <div class="mb-3">
             <label for="mobile">Mobile:</label>
-            <input type="text" class="form-control" id="mobile" name="mobile" required>
+            <input type="text" class="form-control" id="mobile" name="mobile">
         </div>
         <div class="mb-3">
             <label for="password">Password:</label>
