--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -43,6 +43,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.barcode') }}">Barcode</a>
+                    </li>
                     {% if current_user.roomadm == 'X' %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.roomcontrol') }}">Room</a>
