--- a/project/templates/barcode.html
+++ b/project/templates/barcode.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 <table class="table">
+  <thead>
+    <tr>
+      <td>HOST</td>
+      <td>ROOM</td>
+    </tr>
+  </thead>
   <tbody>
     <tr>
       <td>
