--- a/project/templates/barcode.html
+++ b/project/templates/barcode.html
@@ -4,18 +4,18 @@
 <table class="table">
   <thead>
     <tr>
-      <td>HOST</td>
-      <td>ROOM</td>
+      <th align="center">HOST</th>
+      <th align="center">ROOM</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>
+      <td align="center">
         <div class="login-container">
           <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="384" height="384">
         </div>
       </td>
-      <td>
+      <td align="center">
         <div class="signup-container">
           <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="384" height="384">
         </div>
