--- a/project/templates/barcode.html
+++ b/project/templates/barcode.html
@@ -4,20 +4,20 @@
 <table class="table">
   <thead>
     <tr>
-      <th align="center">HOST</th>
-      <th align="center">ROOM</th>
+      <td align="center">HOST</td>
+      <td align="center">ROOM</td>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td align="center">
         <div class="login-container">
-          <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="384" height="384">
+          <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="480" height="480">
         </div>
       </td>
       <td align="center">
         <div class="signup-container">
-          <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="384" height="384">
+          <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="480" height="480">
         </div>
       </td>
     </tr>
