--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -16,7 +16,7 @@
             <input type="text" class="form-control" id="email" name="email" required>
         </div>
         <div class="mb-3">
-            <label for="mobile">Mobile:</label>
+            <label for="mobile" hidden>Mobile:</label>
             <input type="text" class="form-control" id="mobile" name="mobile" hidden>
         </div>
         <div class="mb-3">
