--- a/project/templates/room.html
+++ b/project/templates/room.html
@@ -45,11 +45,25 @@
         <input type="range" id="volume-control" min="0" max="1" step="0.01" value="1">
     </div>
     <br>
+    <div class="input-group">
+        <form method="POST" action="{{ url_for('main.setcommand', command='qrcode') }}">
+            <button type="submit" class="btn btn-primary">
+                {% if room.barcode == 1 %}
+                <img src="{{ url_for('static', filename='images/icon-qrcodev.png') }}" alt="Button image" height="48"
+                    width="48">
+                {% else %}
+                <img src="{{ url_for('static', filename='images/icon-qrcodea.png') }}" alt="Button image" height="48"
+                    width="48">
+                {% endif %}
+            </button>
+        </form>
+    </div>
+    <br>
 </div>
 <br>
 <div class="container border">
     <br>
-    <div class="container border">        
+    <div class="container border">
         <h3 class="fa fa-align-center" aria-hidden="true">Users</h3>
         <table class="table">
             <thead>
