--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -162,6 +162,7 @@
       <p class="text-white" id="next-song"></p>
     </div>
   </div>
+  {% if room.barcode == 1 %}
   <div class="signup-container">
     <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="96" height="96">
     <span class="qrcode-label">Room</span >
@@ -170,6 +171,7 @@
     <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="96" height="96">
     <span class="qrcode-label">Host</span>
   </div>
+  {% endif %}
   <script>
     const video = document.getElementById("video");
 
