--- a/project/templates/barcode.html
+++ b/project/templates/barcode.html
@@ -1,23 +1,59 @@
 {% extends "base.html" %}
 
+{% block headscript %}
+<meta http-equiv="refresh" content="10">
+{% endblock %}
+
 {% block content %}
 <table class="table">
   <thead>
-    <tr>
-      <td align="center">HOST</td>
-      <td align="center">ROOM</td>
-    </tr>
   </thead>
   <tbody>
     <tr>
+      <td></td>
       <td align="center">
-        <div class="login-container">
-          <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="480" height="480">
-        </div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Singer</th>
+              <th>Music</th>
+              <th>Artist</th>
+              <th>D</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for queue_item in queue %}
+            <tr>
+              <td>
+                {% if queue_item.status == 'P' %}
+                <img src="{{ url_for('static', filename='images/icon-play.png') }}" height="24" width="24">
+                {% else %}
+                {{ queue_item.order }}
+                {% endif %}
+              </td>
+              <td>{{ queue_item.singer }}
+              </td>
+              <td>{{ queue_item.song }}</td>
+              <td>{{ queue_item.artist }}</td>
+              <td>
+                {% if queue_item.status == 'D' %}
+                <img src="{{ url_for('static', filename='images/icon-download.png') }}" height="24" width="24">
+                {% endif %}
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
       </td>
       <td align="center">
+        <div class="login-container">
+          <a align="center">HOST</a><br>
+          <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="250" height="250">
+        </div><br><br><br>
         <div class="signup-container">
-          <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="480" height="480">
+          <a align="center">ROOM</a><br>
+          <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="250" height="250">
         </div>
       </td>
     </tr>
