--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -4,7 +4,7 @@
 <div class="container mt-3">
     <form method="POST" action="/login">
         <div class="mb-3 mt-3">
-            <label for="userid">User:</label>
+            <label for="userid">User / E-mail:</label>
             <input type="text" class="form-control" id="userid" name="userid" required>
         </div>
         <div class="mb-3">
