--- a/project/templates/queue.html
+++ b/project/templates/queue.html
@@ -21,7 +21,14 @@
             <tr>
                 <td>
                     {% if queue_item.status == 'P' %}
+                    {% if current_user.roomadm == 'X' %}
+                    <a class="clickable-image" id="{{ queue_item.id }}"
+                        href="{{ url_for('main.delqueue', queueid=queue_item.id) }}">
+                        <img src="{{ url_for('static', filename='images/icon-play.png') }}" height="24" width="24">
+                    </a>
+                    {% else %}
                     <img src="{{ url_for('static', filename='images/icon-play.png') }}" height="24" width="24">
+                    {% endif %}
                     {% elif current_user.roomadm == 'X' or current_user.id == queue_item.userid %}
                     <a class="clickable-image" id="{{ queue_item.id }}"
                         href="{{ url_for('main.delqueue', queueid=queue_item.id) }}">
