--- a/project/templates/musicdb.html
+++ b/project/templates/musicdb.html
@@ -7,8 +7,8 @@
         <thead>
             <tr>
                 <th></th>
-                <th>Artist</th>
-                <th>Music</th>
+                <th>{{ _('Artist') }}</th>
+                <th>{{ _('Music') }}</th>
             </tr>
         </thead>
         <tbody>
