--- a/project/templates/youtube.html
+++ b/project/templates/youtube.html
@@ -13,8 +13,8 @@
         <thead>
             <tr>
                 <th></th>
-                <th>Preview</th>
-                <th>Description</th>
+                <th>{{ _('Preview') }}</th>
+                <th>{{ _('Description') }}</th>
             </tr>
         </thead>
         <tbody>
