--- a/project/templates/barcode.html
+++ b/project/templates/barcode.html
@@ -16,9 +16,9 @@
           <thead>
             <tr>
               <th>#</th>
-              <th>Singer</th>
-              <th>Music</th>
-              <th>Artist</th>
+              <th>{{ _('Singer') }}</th>
+              <th>{{ _('Music') }}</th>
+              <th>{{ _('Artist') }}</th>
               <th>D</th>
             </tr>
           </thead>
@@ -48,11 +48,11 @@
       </td>
       <td align="center">
         <div class="login-container">
-          <a align="center">HOST</a><br>
+          <a align="center">{{ _('HOST') }}</a><br>
           <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="250" height="250">
         </div><br><br><br>
         <div class="signup-container">
-          <a align="center">ROOM</a><br>
+          <a align="center">{{ _('ROOM') }}</a><br>
           <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="250" height="250">
         </div>
       </td>
