--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class="container border">
-    <h3 class="fa fa-align-center" aria-hidden="true">Settings</h3>
+    <h3 class="fa fa-align-center" aria-hidden="true">{{ _('Settings') }}</h3>
     <form action="{{ url_for('main.configuration') }}" method="POST">
         <div class="input-group">
-            <label for="song_library">Song Library:&nbsp;&nbsp;</label>
+            <label for="song_library">{{ _('Song Library:') }}&nbsp;&nbsp;</label>
             <select name="song_library" id="song_library">
                 {% if config.library == "0" %}
                 <option value="0" selected>MusicBrainz</option>
@@ -18,25 +18,25 @@
         </div>
         <br>
         <div class="input-group">
-            <label for="lastfm">LAST.FM API Key:&nbsp;&nbsp;</label>
+            <label for="lastfm">{{ _('LAST.FM API Key:') }}&nbsp;&nbsp;</label>
             <input type="text" class="form-control" id="lastfm" name="lastfm" value="{{ config.lastfm }}">&nbsp;&nbsp;
-            <a href="https://www.last.fm/login?next=%2Fapi%2Faccounts%3F_pjax%3D%2523content">Get API
-                Key</a>
+            <a href="https://www.last.fm/login?next=%2Fapi%2Faccounts%3F_pjax%3D%2523content">{{ _('Get API
+                Key') }}</a>
         </div>
         <br>
         <div class="input-group">
-            <label for="updateratio">Screen update sec:&nbsp;&nbsp;</label>
+            <label for="updateratio">{{ _('Screen update sec:') }}&nbsp;&nbsp;</label>
             <input type="number" class="form-control" id="updateratio" name="updateratio" min="1" max="10"
                 value="{{ config.updateratio }}" required>
         </div>
         <br>
-        <button class="btn btn-outline-primary">Update</button>
+        <button class="btn btn-outline-primary">{{ _('Update') }}</button>
     </form>
     <br>
 </div>
 <br>
 <div class="container border">
-    <h3 class="fa fa-align-center" aria-hidden="true">Create Room</h3>
+    <h3 class="fa fa-align-center" aria-hidden="true">{{ _('Create Room') }}</h3>
     <form method="POST" action="{{ url_for('main.createroom') }}">
         <div class="input-group">
             <input type="text" class="form-control" id="roomid" name="roomid" autocomplete="off" placeholder="Room"
@@ -47,14 +47,14 @@
                 <option value="{{ user.id }}">{{ user.name }}</option>
                 {% endfor %}
             </datalist>&nbsp;&nbsp;
-            <button type="submit" class="btn btn-outline-primary">Save</button>
+            <button type="submit" class="btn btn-outline-primary">{{ _('Save') }}</button>
         </div>
     </form>
     <br>
 </div>
 <br>
 <div class="container border">
-    <h3 class="fa fa-align-center" aria-hidden="true">Delete Room</h3>
+    <h3 class="fa fa-align-center" aria-hidden="true">{{ _('Delete Room') }}</h3>
     <form method="POST" action="{{ url_for('main.delroom') }}">
         <div class="input-group">
             <input list="delroomid" name="delroomid" autocomplete="off" placeholder="Room" required>
@@ -63,14 +63,14 @@
                 <option value="{{ room.roomid }}">{{ room.roomid }}</option>
                 {% endfor %}
             </datalist>&nbsp;&nbsp;
-            <button type="submit" class="btn btn-outline-primary">Delete</button>
+            <button type="submit" class="btn btn-outline-primary">{{ _('Delete') }}</button>
         </div>
     </form>
     <br>
 </div>
 <br>
 <div class="container border">
-    <h3 class="fa fa-align-center" aria-hidden="true">User</h3>
+    <h3 class="fa fa-align-center" aria-hidden="true">{{ _('User') }}</h3>
     <form method="POST" action="{{ url_for('main.updateuser') }}">
         <div class="input-group">
             <input list="updateuserid" name="updateuserid" autocomplete="off" placeholder="Room" required>
