--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -3,11 +3,11 @@
 {% block content %}
 <div class="container mt-3">
     <h3 class="title">
-        Welcome, {{ current_user.name }} !
+        {{ _('Welcome,') }} {{ current_user.name }} !
     </h3>
     <br>
     <div class="alert alert-primary">
-        You are in room: {{ current_user.roomid }}
+        {{ _('You are in room:') }} {{ current_user.roomid }}
     </div>
 </div>
 <div class="container border">
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-3 text-white">
-                    <label for="name">Name:</label>
+                    <label for="name">{{ _('Name:') }}</label>
                 </div>
                 <div class="col-9 text-white">
                     <input type="text" class="form-control" id="name" name="name" value="{{ current_user.name }}"
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col-3 text-white">
-                    <label for="email">E-mail:</label>
+                    <label for="email">{{ _('E-mail:') }}</label>
                 </div>
                 <div class="col-9 text-white">
                     <input type="text" class="form-control" id="email" name="email" value="{{ current_user.email }}"
@@ -34,7 +34,7 @@
             </div>
             <div class="row">
                 <div class="col-3 text-white">
-                    <label for="mobile">Mobile:</label>
+                    <label for="mobile">{{ _('Mobile:') }}</label>
                 </div>
                 <div class="col-9 text-white">
                     <input type="text" class="form-control" id="mobile" name="mobile" value="{{ current_user.mobile }}"
@@ -43,7 +43,7 @@
             </div>
             <div class="row">
                 <div class="col-3 text-white">
-                    <label for="password">Password:</label>
+                    <label for="password">{{ _('Password:') }}</label>
                 </div>
                 <div class="col-9 text-white">
                     <input type="password" class="form-control" id="password" name="password">
@@ -51,7 +51,7 @@
             </div>
             <div class="row">
                 <div class="col-3 text-white">
-                    <label for="repass">Re-type Password:</label>
+                    <label for="repass">{{ _('Re-type Password:') }}</label>
                 </div>
                 <div class="col-9 text-white">
                     <input type="password" class="form-control" id="repass" name="repass">
@@ -59,7 +59,7 @@
             </div>
             <div class="row">
                 <div class="col-3 text-white">
-                    <label for="room_selection">Room:</label>
+                    <label for="room_selection">{{ _('Room:') }}</label>
                 </div>
                 <div class="col-3 text-white">
                     <select name="room_selection" id="room_selection">
@@ -74,11 +74,11 @@
             </div>
         </div>
         <br>
-        <button class="btn btn-outline-primary">Update</button>
+        <button class="btn btn-outline-primary">{{ _('Update') }}</button>
     </form>
     <br>
     <form action="/changeroom" method="POST">
-        <p>* Regular users must scan QR code in KaraTube player screen to change room or ask a room admin to add him.</p>
+        <p>* {{ _('Regular users must scan QR code in KaraTube player screen to change room or ask a room admin to add him.') }}</p>
         <div class="mb-3" id="reader"></div>
         <input type="hidden" class="form-control" id="roomid" name="roomid" value="" required>
         <input type="hidden" class="form-control" id="roompass" name="roompass" value="" required>
