--- a/project/templates/queue.html
+++ b/project/templates/queue.html
@@ -3,16 +3,16 @@
 {% block content %}
 
 <div class="container mt-3">
-    <h3 class="fa fa-align-center" aria-hidden="true">Room: {{ current_user.roomid }}</h3>
+    <h3 class="fa fa-align-center" aria-hidden="true">{{ _('Room:') }} {{ current_user.roomid }}</h3>
     <table class="table">
         <thead>
             <tr>
                 {% if current_user.roomadm == 'X' %}
                 <th></th>
                 {% endif %}
-                <th>Singer</th>
-                <th>Music</th>
-                <th>Artist</th>
+                <th>{{ _('Singer') }}</th>
+                <th>{{ _('Music') }}</th>
+                <th>{{ _('Artist') }}</th>
                 <th>D</th>
             </tr>
         </thead>
