--- a/project/templates/recoverlogin.html
+++ b/project/templates/recoverlogin.html
@@ -8,14 +8,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-3 text-white">
-                    <label for="email">E-mail:</label>
+                    <label for="email">{{ _('E-mail:') }}</label>
                 </div>
                 <div class="col-9 text-white">
                     <input type="text" class="form-control" id="email" name="email" required>
                 </div>
             </div>
         <br>
-        <button class="btn btn-outline-primary">Send</button>
+        <button class="btn btn-outline-primary">{{ _('Send') }}</button>
         <br>
     </form>   
     <br> 
