--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -4,27 +4,27 @@
 <div class="container mt-3">
     <form action="/signup" method="POST">
         <div class="mb-3 mt-3">
-            <label for="username">User:</label>
+            <label for="username">{{ _('User:') }}</label>
             <input type="text" class="form-control" id="userid" name="userid" required>
         </div>
         <div class="mb-3">
-            <label for="name">Name:</label>
+            <label for="name">{{ _('Name:') }}</label>
             <input type="text" class="form-control" id="name" name="name" required>
         </div>
         <div class="mb-3">
-            <label for="email">E-mail:</label>
+            <label for="email">{{ _('E-mail:') }}</label>
             <input type="text" class="form-control" id="email" name="email" required>
         </div>
         <div class="mb-3">
-            <label for="mobile" hidden>Mobile:</label>
+            <label for="mobile" hidden>{{ _('Mobile:') }}</label>
             <input type="text" class="form-control" id="mobile" name="mobile" hidden>
         </div>
         <div class="mb-3">
-            <label for="password">Password:</label>
+            <label for="password">{{ _('Password:') }}</label>
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
         <div class="mb-3">
-            <label for="repass">Re-type Password:</label>
+            <label for="repass">{{ _('Re-type Password:') }}</label>
             <input type="password" class="form-control" id="repass" name="repass" required>
         </div>
         <div class="mb-3" id="reader"></div>
@@ -34,7 +34,7 @@
         <div class="mb-3">
             <input type="hidden" class="form-control" id="roompass" name="roompass" value="" required>
         </div>
-        <button hidden class="btn btn-outline-primary" id="signup">Sign Up</button>
+        <button hidden class="btn btn-outline-primary" id="signup">Sign Up'</button>
     </form>
 </div>
 <script>
