--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -37,8 +37,7 @@
                     <label for="mobile">{{ _('Mobile:') }}</label>
                 </div>
                 <div class="col-9 text-white">
-                    <input type="text" class="form-control" id="mobile" name="mobile" value="{{ current_user.mobile }}"
-                        required>
+                    <input type="text" class="form-control" id="mobile" name="mobile" value="{{ current_user.mobile }}">
                 </div>
             </div>
             <div class="row">
